2008-04-14  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Source/Patch.pm (_fail_not_same_type): Fix
	inversion between new/old filetype.

2008-04-12  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Path.pm (check_files_are_the_same): Add a new
	parameter so that we can use stat() instead of lstat() and
	compare if pointed files are the same.
	* scripts/Dpkg/Source/Package.pm: Resolve symlinks before deciding
	if both original tarballs are the same or not. Use the new
	parameter of check_files_are_the_same() for this.
	* scripts/Dpkg/Source/Package/V1_0.pm: Remove useless import of
	check_files_are_the_same.

2008-04-12  Sven Joachim  <svenjoac@gmx.de>

	* scripts/Dpkg/Source/Package.pm: Add missing import of
	subprocerr.

2008-04-12  Russell Coker <russell@coker.com.au>,
            Guillem Jover  <guillem@debian.org>

	* src/archives.c (tarobject): Set scontext to NULL after freecon.

2008-04-10  Sven Joachim  <svenjoac@gmx.de>

	* src/trigcmd.c: Fix typo.

2008-04-09  Sven Joachim  <svenjoac@gmx.de>

	* THANKS: Update my e-mail address.

2008-04-08  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.14.19~.

2008-04-08  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.14.18.

2008-04-08  Guillem Jover  <guillem@debian.org>

	* doc/triggers.txt: Fix wrong dpkg trigger related option names.

2008-04-08  Guillem Jover  <guillem@debian.org>

	* doc/triggers.txt: Move parts of the document into proper man pages.
	Add references to those.

2008-04-05  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Source/Package/V1_0.pm: Do not use
	diff -p to generate patches as dpkg-source of sarge doesn't accept
	data after the @@.

2008-04-04  Raphael Hertzog  <hertzog@debian.org>

	* scripts/Dpkg/Shlibs/SymbolFile.pm (get_smallest_version): New
	function to retrieve the smallest "minver" of all symbols of a
	given library.
	* scripts/dpkg-shlibdeps.pl: Do not initialize dependencies of