@@ -11,6 +11,9 @@ dpkg (1.14.19) UNRELEASED; urgency=low
     original tarball in the current extraction directory. Closes: #475668
   * Fix the dpkg-source error message about unrepresentable changes to
     source because the type of a file changed (new and old were inverted).
+  * Fix dpkg-genchanges to detect udeb based on Package-Type control
+    header instead of file extension analysis on uploaded files.
+    Closes: #476113
 
   [ Updated dpkg translations ]
   * Galician (Jacobo Tarrio).
